testsuite/positive/bug-1234.n
using System;
using System.Console;

[Record]
variant X
{
  | A { a : int; }
  | B
  
  public Prop : int { get; set; }
}

module Program
{
  Test(xyz : object) : void
  {
    match (xyz)
    {
      | X where (Prop = 1) => WriteLine(1)
      | X where (Prop = 2) => WriteLine(2)
      | x is int           => WriteLine($"int($x)")
      | _ => WriteLine("none")
    }
  }

  Main() : void
  {
    Test(123);
    Test(X.A(1, 2));
    Test(X.A(2, 3));
  }
}

/*
BEGIN-OUTPUT
int(123)
1
2
END-OUTPUT
*/
